docs: add lab-lexicon

--- a/book/lectures/nlp_intro/sentiments/lab-lexicon.ipynb
+++ b/book/lectures/nlp_intro/sentiments/lab-lexicon.ipynb
@@ -11,73 +11,81 @@
     "tags": []
    },
    "source": [
-    "## Lexicon-based Methods in Practice\n"
+    "# Lab: Lexicon-Based Sentiment Analysis\n",
+    "\n",
+    "In this lab session, we will explore various lexicon-based methods for sentiment analysis. Lexicon-based methods rely on a predefined list of words with associated sentiment scores to determine the overall sentiment of a text. We will use the following lexicon-based methods:\n",
+    "\n",
+    "1. TextBlob\n",
+    "2. AFINN\n",
+    "3. VADER\n",
+    "\n",
+    "We will perform sentiment analysis on the `movie_reviews` dataset from the NLTK package.\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "First, let's import the required packages and load the dataset.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "63fe3370",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install ekorpkit\n",
-    "from ekorpkit.models.metrics import evaluate_classification_performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "35a5cd22",
-   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#review count: 2000\n",
-      "#samples of file ids: ['neg/cv000_29416.txt', 'neg/cv001_19502.txt', 'neg/cv002_17424.txt', 'neg/cv003_12683.txt', 'neg/cv004_12641.txt', 'neg/cv005_29357.txt', 'neg/cv006_17022.txt', 'neg/cv007_4992.txt', 'neg/cv008_29326.txt', 'neg/cv009_29417.txt']\n",
-      "#categories of reviews: ['neg', 'pos']\n",
-      "#num of \"neg\" reviews: 1000\n",
-      "#num of \"pos\" reviews: 1000\n",
-      "#id of the first review: neg/cv000_29416.txt\n",
-      "#part of the first review: plot : two teen couples go to a church party , drink and then drive . \n",
-      "they get into an accident . \n",
-      "one of the guys dies , but his girlfriend continues to see him in her life , and has nightmares . \n",
-      "what's the deal ? \n",
-      "watch the movie and \" sorta \" find out . . . \n",
-      "critique : a mind-fuck movie for the teen generation that touches on a very cool idea , but presents it in a very bad package . \n",
-      "which is what makes this review an even harder one to write , since i generally applaud films which attempt\n",
-      "#sentiment of the first review: ['neg']\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package movie_reviews to /root/nltk_data...\n",
-      "[nltk_data]   Package movie_reviews is already up-to-date!\n"
+      "[nltk_data] Downloading package movie_reviews to\n",
+      "[nltk_data]     /home/yjlee/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/movie_reviews.zip.\n",
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     /home/yjlee/nltk_data...\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import nltk\n",
+    "from nltk.corpus import movie_reviews\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    f1_score,\n",
+    "    classification_report,\n",
+    "    confusion_matrix,\n",
+    ")\n",
     "\n",
     "nltk.download(\"movie_reviews\")\n",
-    "\n",
-    "from nltk.corpus import movie_reviews\n",
-    "\n",
-    "print(\"#review count:\", len(movie_reviews.fileids()))\n",
-    "print(\"#samples of file ids:\", movie_reviews.fileids()[:10])\n",
-    "print(\"#categories of reviews:\", movie_reviews.categories())\n",
-    "print('#num of \"neg\" reviews:', len(movie_reviews.fileids(categories=\"neg\")))\n",
-    "print('#num of \"pos\" reviews:', len(movie_reviews.fileids(categories=\"pos\")))\n",
-    "\n",
-    "fileid = movie_reviews.fileids()[0]\n",
-    "print(\"#id of the first review:\", fileid)\n",
-    "print(\"#part of the first review:\", movie_reviews.raw(fileid)[:500])\n",
-    "print(\"#sentiment of the first review:\", movie_reviews.categories(fileid))\n",
-    "\n",
+    "nltk.download(\"vader_lexicon\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "89ee3f64",
+   "metadata": {},
+   "source": [
+    "Next, we'll extract the reviews and their categories (positive or negative).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0677c3f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fileids = movie_reviews.fileids()\n",
     "reviews = [movie_reviews.raw(fileid) for fileid in fileids]\n",
     "categories = [movie_reviews.categories(fileid)[0] for fileid in fileids]\n"
@@ -86,90 +94,90 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "00824666",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
+   "id": "ca9fed8c",
+   "metadata": {},
    "source": [
-    "### TextBlob\n",
-    "\n",
-    "- https://textblob.readthedocs.io/en/dev/quickstart.html\n"
+    "Now, we'll define a function to evaluate the classification performance of each lexicon-based method.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0fc1d774",
+   "execution_count": 4,
+   "id": "6c142ca3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "%pip install -U textblob"
+    "def evaluate_classification_performance(true_labels, predicted_labels):\n",
+    "    print(\"Accuracy: \", accuracy_score(true_labels, predicted_labels))\n",
+    "    print(\n",
+    "        \"Precision: \",\n",
+    "        precision_score(true_labels, predicted_labels, average=\"weighted\"),\n",
+    "    )\n",
+    "    print(\"Recall: \", recall_score(true_labels, predicted_labels, average=\"weighted\"))\n",
+    "    print(\"F1 Score: \", f1_score(true_labels, predicted_labels, average=\"weighted\"))\n",
+    "    print(\"Model Report: \\n___________________________________________________\")\n",
+    "    print(classification_report(true_labels, predicted_labels))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e0ece566",
+   "metadata": {},
+   "source": [
+    "## TextBlob\n",
+    "\n",
+    "TextBlob is a simple Python library for processing textual data. It provides a simple API for diving into common natural language processing (NLP) tasks such as part-of-speech tagging, noun phrase extraction, sentiment analysis, classification, translation, and more.\n",
+    "\n",
+    "- https://textblob.readthedocs.io/en/dev/quickstart.html\n",
+    "\n",
+    "### Performing sentiment analysis using TextBlob\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a1b699f",
+   "id": "f15b4bfb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentiment(polarity=0.06479782948532947, subjectivity=0.5188408350908352)\n"
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Collecting textblob\n",
+      "  Downloading textblob-0.17.1-py2.py3-none-any.whl (636 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m636.8/636.8 kB\u001b[0m \u001b[31m17.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: nltk>=3.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from textblob) (3.8.1)\n",
+      "Requirement already satisfied: joblib in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk>=3.1->textblob) (1.2.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk>=3.1->textblob) (2023.3.23)\n",
+      "Requirement already satisfied: click in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk>=3.1->textblob) (8.1.3)\n",
+      "Requirement already satisfied: tqdm in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk>=3.1->textblob) (4.65.0)\n",
+      "Installing collected packages: textblob\n",
+      "Successfully installed textblob-0.17.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "from textblob import TextBlob\n",
-    "\n",
-    "result = TextBlob(reviews[0])\n",
-    "print(result.sentiment)"
+    "%pip install textblob"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99ff08d2",
+   "id": "cbd2f84d",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sentiment_TextBlob(docs):\n",
-    "    results = []\n",
-    "\n",
-    "    for doc in docs:\n",
-    "        testimonial = TextBlob(doc)\n",
-    "        if testimonial.sentiment.polarity > 0:\n",
-    "            results.append(\"pos\")\n",
-    "        else:\n",
-    "            results.append(\"neg\")\n",
-    "    return results\n",
-    "\n",
-    "\n",
-    "predictions = sentiment_TextBlob(reviews)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "87a616d4",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Accuracy:  0.6\n",
-      "Precison:  0.7225010902553423\n",
+      "Precision:  0.7225010902553423\n",
       "Recall:  0.6\n",
       "F1 Score:  0.5361560556566348\n",
       "Model Report: \n",
@@ -187,76 +195,91 @@
     }
    ],
    "source": [
-    "cm = evaluate_classification_performance(categories, predictions)"
+    "from textblob import TextBlob\n",
+    "\n",
+    "\n",
+    "def sentiment_TextBlob(docs):\n",
+    "    results = []\n",
+    "\n",
+    "    for doc in docs:\n",
+    "        testimonial = TextBlob(doc)\n",
+    "        if testimonial.sentiment.polarity > 0:\n",
+    "            results.append(\"pos\")\n",
+    "        else:\n",
+    "            results.append(\"neg\")\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "predictions = sentiment_TextBlob(reviews)\n",
+    "evaluate_classification_performance(categories, predictions)"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "9ec2388e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
+   "id": "2dcf99a4",
+   "metadata": {},
    "source": [
-    "### AFINN\n",
+    "## AFINN\n",
+    "\n",
+    "AFINN is a list of English words rated for valence with an integer between minus five (negative) and plus five (positive). The words have been manually labeled by Finn Årup Nielsen in 2009-2011. The file is tab-separated. There are two versions:\n",
+    "\n",
+    "- AFINN-111: Newest version with 2477 words and phrases.\n",
+    "- AFINN-96: 1468 unique words and phrases on 1480 lines. Note that there are 1480 lines, as some words are listed twice. The word list in AFINN-96 is the same as AFINN-111, but with 1009 fewer words and phrases.\n",
+    "\n",
+    ">\n",
     "\n",
     "- https://github.com/fnielsen/afinn\n",
-    "- http://corpustext.com/reference/sentiment_afinn.html\n"
+    "- http://corpustext.com/reference/sentiment_afinn.html\n",
+    "\n",
+    "### Performing sentiment analysis using AFINN\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "173bfd3b",
+   "execution_count": 7,
+   "id": "95ac5498",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Collecting afinn\n",
+      "  Downloading afinn-0.1.tar.gz (52 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m52.6/52.6 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: afinn\n",
+      "  Building wheel for afinn (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for afinn: filename=afinn-0.1-py3-none-any.whl size=53430 sha256=3a6e16220649c10b4cd5b3ca2aa3ac50b9e5b24f322be56bbed0737c3feefaaa\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-b1osgjx9/wheels/f6/6f/c3/b305c5107a17618f2938a067d5ffcbb556909d82398762089e\n",
+      "Successfully built afinn\n",
+      "Installing collected packages: afinn\n",
+      "Successfully installed afinn-0.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
     "%pip install afinn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9bf3db8f",
+   "id": "509c0d27",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from afinn import Afinn\n",
-    "\n",
-    "\n",
-    "def sentiment_Afinn(docs):\n",
-    "    afn = Afinn(emoticons=True)\n",
-    "    results = []\n",
-    "\n",
-    "    for doc in docs:\n",
-    "        if afn.score(doc) > 0:\n",
-    "            results.append(\"pos\")\n",
-    "        else:\n",
-    "            results.append(\"neg\")\n",
-    "    return results\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4be2bdfc",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Accuracy:  0.664\n",
-      "Precison:  0.6783880680137142\n",
+      "Precision:  0.6783880680137142\n",
       "Recall:  0.664\n",
       "F1 Score:  0.6570854714462421\n",
       "Model Report: \n",
@@ -274,88 +297,52 @@
     }
    ],
    "source": [
+    "from afinn import Afinn\n",
+    "\n",
+    "\n",
+    "def sentiment_Afinn(docs):\n",
+    "    afn = Afinn(emoticons=True)\n",
+    "    results = []\n",
+    "\n",
+    "    for doc in docs:\n",
+    "        if afn.score(doc) > 0:\n",
+    "            results.append(\"pos\")\n",
+    "        else:\n",
+    "            results.append(\"neg\")\n",
+    "    return results\n",
+    "\n",
+    "\n",
     "predictions = sentiment_Afinn(reviews)\n",
-    "cm = evaluate_classification_performance(categories, predictions)"
+    "evaluate_classification_performance(categories, predictions)\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "77ffc836",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "### VADER\n",
-    "\n",
-    "- https://github.com/cjhutto/vaderSentiment\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f2f2a403",
+   "id": "8cf9f17f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package vader_lexicon to /root/nltk_data...\n",
-      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
-     ]
-    }
-   ],
    "source": [
-    "%%capture\n",
-    "import nltk\n",
-    "nltk.download('vader_lexicon')"
+    "## VADER\n",
+    "\n",
+    "VADER (Valence Aware Dictionary and sEntiment Reasoner) is a lexicon## Lexicon-based Methods in Practice and rule-based sentiment analysis tool that is specifically attuned to sentiments expressed in social media. VADER uses a combination of a sentiment lexicon, a set of linguistic rules, and grammatical heuristics to predict the sentiment of a given text.\n",
+    "\n",
+    "- https://github.com/cjhutto/vaderSentiment\n",
+    "\n",
+    "### Performing sentiment analysis using VADER\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "77c37d79",
+   "execution_count": 9,
+   "id": "d70835d8",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-    "\n",
-    "\n",
-    "def sentiment_vader(docs):\n",
-    "    analyser = SentimentIntensityAnalyzer()\n",
-    "    results = []\n",
-    "\n",
-    "    for doc in docs:\n",
-    "        score = analyser.polarity_scores(doc)\n",
-    "        if score[\"compound\"] > 0:\n",
-    "            results.append(\"pos\")\n",
-    "        else:\n",
-    "            results.append(\"neg\")\n",
-    "\n",
-    "    return results\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "982b4da5",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Accuracy:  0.635\n",
-      "Precison:  0.6580655585685583\n",
+      "Precision:  0.6580655585685583\n",
       "Recall:  0.635\n",
       "F1 Score:  0.6211802777111816\n",
       "Model Report: \n",
@@ -373,8 +360,38 @@
     }
    ],
    "source": [
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
+    "\n",
+    "def sentiment_vader(docs):\n",
+    "    analyser = SentimentIntensityAnalyzer()\n",
+    "    results = []\n",
+    "\n",
+    "    for doc in docs:\n",
+    "        score = analyser.polarity_scores(doc)\n",
+    "        if score[\"compound\"] > 0:\n",
+    "            results.append(\"pos\")\n",
+    "        else:\n",
+    "            results.append(\"neg\")\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "\n",
     "predictions = sentiment_vader(reviews)\n",
-    "cm = evaluate_classification_performance(categories, predictions)"
+    "evaluate_classification_performance(categories, predictions)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f1592650",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lab session, we explored various lexicon-based sentiment analysis methods, including TextBlob, AFINN, and VADER. We applied these methods to the `movie_reviews` dataset and evaluated their classification performance using accuracy, precision, recall, and F1 score metrics.\n",
+    "\n",
+    "It is important to note that lexicon-based methods have limitations, such as sensitivity to the context in which words are used and the inability to capture complex semantic relationships between words. However, they can still provide valuable insights for sentiment analysis tasks, especially when combined with other approaches like machine learning-based techniques.\n"
    ]
   },
   {
