--- a/_sources/lectures/nlp_intro/datasets/lab-dart.ipynb
+++ b/_sources/lectures/nlp_intro/datasets/lab-dart.ipynb
@@ -107,7 +107,7 @@
         "import OpenDartReader\n",
         "\n",
         "api_key = \"your_api_key_here\"\n",
-        "dart = OpenDartReader(api_key)\n"
+        "dart = OpenDartReader(api_key)"
       ]
     },
     {
@@ -211,7 +211,7 @@
         "load_dotenv(dotenv_path)\n",
         "DART_API_KEY = os.environ.get(\"DART_API_KEY\")\n",
         "\n",
-        "dart = OpenDartReader(DART_API_KEY)\n"
+        "dart = OpenDartReader(DART_API_KEY)"
       ]
     },
     {
@@ -230,7 +230,7 @@
       },
       "outputs": [],
       "source": [
-        "dart.list(\"005930\", start=\"1999-01-01\", kind=\"A\")\n"
+        "dart.list(\"005930\", start=\"1999-01-01\", kind=\"A\")"
       ]
     },
     {
@@ -248,7 +248,7 @@
       "outputs": [],
       "source": [
         "sub_docs = dart.sub_docs(\"20220308000798\", match=\"이사의 경영진단 및 분석의견\")\n",
-        "sub_docs\n"
+        "sub_docs"
       ]
     },
     {
@@ -265,7 +265,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "url = sub_docs.url[sub_docs.index[0]]"
+        "url = sub_docs.url[sub_docs.index[0]]\n"
       ]
     },
     {
@@ -273,9 +273,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Crawling the M&DA Section from the Financial Statement\n",
+        "## Crawling the MD&A Section from the Financial Statement\n",
         "\n",
-        "To extract the Management's Discussion and Analysis (M&DA) section from the financial statement, we will use the **BeautifulSoup** library. First, install the library:\n",
+        "To extract the Management's Discussion and Analysis (MD&A) section from the financial statement, we will use the **BeautifulSoup** library. First, install the library:\n",
         "\n",
         "```bash\n",
         "pip install beautifulsoup4\n",
@@ -304,7 +304,7 @@
         "\n",
         "page = requests.get(url)\n",
         "soup = BeautifulSoup(page.content, \"html.parser\")\n",
-        "soup.get_text()\n"
+        "soup.get_text()"
       ]
     },
     {
