--- a/book/references.bib
+++ b/book/references.bib
@@ -669,3 +669,10 @@
   journal={arXiv preprint arXiv:2207.06814},
   year={2022}
 }
+
+@article{kudo2018subword,
+  title={Subword regularization: Improving neural network translation models with multiple subword candidates},
+  author={Kudo, Taku},
+  journal={arXiv preprint arXiv:1804.10959},
+  year={2018}
+}
