refactor(deepnlp): modify tokenization pipeline

--- a/book/lectures/nlp_deep/tokenization/pipeline.ipynb
+++ b/book/lectures/nlp_deep/tokenization/pipeline.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "## Tokenization Pipeline\n",
+    "# Tokenization Pipeline\n",
     "\n",
     "```{figure} figs/tokenization_pipeline.png\n",
     "---\n",
