--- a/_sources/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
+++ b/_sources/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "wiki = load_dataset(\"lcw99/wikipedia-korean-20221001\")\n"
+    "wiki = load_dataset(\"lcw99/wikipedia-korean-20221001\")"
    ]
   },
   {
@@ -113,11 +113,11 @@
    "outputs": [],
    "source": [
     "# change this to your own path\n",
-    "wiki_filepath = \"/tmp/wiki.txt\"\n",
+    "wiki_filepath = \"./tmp/wiki.txt\"\n",
     "\n",
     "text = \"\\n\".join(article[\"text\"] for article in wiki[\"train\"])\n",
     "with open(wiki_filepath, \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(text)"
+    "    f.write(text)\n"
    ]
   },
   {
@@ -141,6 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
       "\n"
      ]
     }
@@ -148,13 +150,16 @@
    "source": [
     "from tokenizers import Tokenizer\n",
     "from tokenizers.models import BPE\n",
+    "from tokenizers.pre_tokenizers import Whitespace\n",
+    "\n",
     "\n",
     "# change this to your own path\n",
-    "bpe_tokenizer_path = \"/tmp/bpe_tokenizer.json\"\n",
+    "bpe_tokenizer_path = \"./tmp/bpe_tokenizer.json\"\n",
     "\n",
     "tokenizer = Tokenizer(BPE())\n",
+    "tokenizer.pre_tokenizer = Whitespace()\n",
     "tokenizer.train([wiki_filepath])\n",
-    "tokenizer.save(bpe_tokenizer_path)"
+    "tokenizer.save(bpe_tokenizer_path)\n"
    ]
   },
   {
@@ -167,18 +172,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from tokenizers.models import WordPiece\n",
     "\n",
     "# change this to your own path\n",
-    "wordpiece_tokenizer_path = \"/tmp/wordpiece_tokenizer.json\"\n",
+    "wordpiece_tokenizer_path = \"./tmp/wordpiece_tokenizer.json\"\n",
     "\n",
     "tokenizer = Tokenizer(WordPiece())\n",
     "tokenizer.train([wiki_filepath])\n",
-    "tokenizer.save(wordpiece_tokenizer_path)"
+    "tokenizer.save(wordpiece_tokenizer_path)\n"
    ]
   },
   {
@@ -191,18 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tokenizers.models import Unigram\n",
     "\n",
     "# change this to your own path\n",
-    "unigram_tokenizer_path = \"/tmp/unigram_tokenizer.json\"\n",
+    "unigram_tokenizer_path = \"./tmp/unigram_tokenizer.json\"\n",
     "\n",
     "tokenizer = Tokenizer(Unigram())\n",
     "tokenizer.train([wiki_filepath])\n",
-    "tokenizer.save(unigram_tokenizer_path)"
+    "tokenizer.save(unigram_tokenizer_path)\n"
    ]
   },
   {
@@ -217,15 +232,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "sentencepiece_trainer.cc(177) LOG(INFO) Running command: --input=./tmp/wiki.txt --model_prefix=sentencepiece --vocab_size=32000 --num_threads=40\n",
+      "sentencepiece_trainer.cc(77) LOG(INFO) Starts training with : \n",
+      "trainer_spec {\n",
+      "  input: ./tmp/wiki.txt\n",
+      "  input_format: \n",
+      "  model_prefix: sentencepiece\n",
+      "  model_type: UNIGRAM\n",
+      "  vocab_size: 32000\n",
+      "  self_test_sample_size: 0\n",
+      "  character_coverage: 0.9995\n",
+      "  input_sentence_size: 0\n",
+      "  shuffle_input_sentence: 1\n",
+      "  seed_sentencepiece_size: 1000000\n",
+      "  shrinking_factor: 0.75\n",
+      "  max_sentence_length: 4192\n",
+      "  num_threads: 40\n",
+      "  num_sub_iterations: 2\n",
+      "  max_sentencepiece_length: 16\n",
+      "  split_by_unicode_script: 1\n",
+      "  split_by_number: 1\n",
+      "  split_by_whitespace: 1\n",
+      "  split_digits: 0\n",
+      "  pretokenization_delimiter: \n",
+      "  treat_whitespace_as_suffix: 0\n",
+      "  allow_whitespace_only_pieces: 0\n",
+      "  required_chars: \n",
+      "  byte_fallback: 0\n",
+      "  vocabulary_output_piece_score: 1\n",
+      "  train_extremely_large_corpus: 0\n",
+      "  hard_vocab_limit: 1\n",
+      "  use_all_vocab: 0\n",
+      "  unk_id: 0\n",
+      "  bos_id: 1\n",
+      "  eos_id: 2\n",
+      "  pad_id: -1\n",
+      "  unk_piece: <unk>\n",
+      "  bos_piece: <s>\n",
+      "  eos_piece: </s>\n",
+      "  pad_piece: <pad>\n",
+      "  unk_surface:  ⁇ \n",
+      "  enable_differential_privacy: 0\n",
+      "  differential_privacy_noise_level: 0\n",
+      "  differential_privacy_clipping_threshold: 0\n",
+      "}\n",
+      "normalizer_spec {\n",
+      "  name: nmt_nfkc\n",
+      "  add_dummy_prefix: 1\n",
+      "  remove_extra_whitespaces: 1\n",
+      "  escape_whitespaces: 1\n",
+      "  normalization_rule_tsv: \n",
+      "}\n",
+      "denormalizer_spec {}\n",
+      "trainer_interface.cc(351) LOG(INFO) SentenceIterator is not specified. Using MultiFileSentenceIterator.\n",
+      "trainer_interface.cc(183) LOG(INFO) Loading corpus: ./tmp/wiki.txt\n",
+      "trainer_interface.cc(378) LOG(WARNING) Found too long line (4536 > 4192).\n",
+      "trainer_interface.cc(380) LOG(WARNING) Too long lines are skipped in the training.\n",
+      "trainer_interface.cc(381) LOG(WARNING) The maximum length can be changed with --max_sentence_length=<size> flag.\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 1000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 2000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 3000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 4000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 5000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 6000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 7000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 8000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 9000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 10000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 11000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 12000000 lines\n",
+      "trainer_interface.cc(145) LOG(INFO) Loaded 13000000 lines\n",
+      "trainer_interface.cc(122) LOG(WARNING) Too many sentences are loaded! (13749557), which may slow down training.\n",
+      "trainer_interface.cc(124) LOG(WARNING) Consider using --input_sentence_size=<size> and --shuffle_input_sentence=true.\n",
+      "trainer_interface.cc(127) LOG(WARNING) They allow to randomly sample <size> sentences from the entire corpus.\n",
+      "trainer_interface.cc(407) LOG(INFO) Loaded all 13749557 sentences\n",
+      "trainer_interface.cc(414) LOG(INFO) Skipped 369 too long sentences.\n",
+      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: <unk>\n",
+      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: <s>\n",
+      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: </s>\n",
+      "trainer_interface.cc(428) LOG(INFO) Normalizing sentences...\n",
+      "trainer_interface.cc(537) LOG(INFO) all chars count=551013136\n",
+      "trainer_interface.cc(548) LOG(INFO) Done: 99.95% characters are covered.\n",
+      "trainer_interface.cc(558) LOG(INFO) Alphabet size=4699\n",
+      "trainer_interface.cc(559) LOG(INFO) Final character coverage=0.9995\n",
+      "trainer_interface.cc(591) LOG(INFO) Done! preprocessed 13441046 sentences.\n",
+      "unigram_model_trainer.cc(247) LOG(INFO) Making suffix array...\n",
+      "unigram_model_trainer.cc(251) LOG(INFO) Extracting frequent sub strings... node_num=224525048\n",
+      "unigram_model_trainer.cc(301) LOG(INFO) Initialized 1004699 seed sentencepieces\n",
+      "trainer_interface.cc(597) LOG(INFO) Tokenizing input sentences with whitespace: 13441046\n",
+      "trainer_interface.cc(608) LOG(INFO) Done! 11688710\n",
+      "unigram_model_trainer.cc(607) LOG(INFO) Using 11688710 sentences for EM training\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=773874 obj=20.4511 num_tokens=38686257 num_tokens/piece=49.9904\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=723238 obj=15.2004 num_tokens=38170992 num_tokens/piece=52.7779\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=460480 obj=15.2601 num_tokens=41257696 num_tokens/piece=89.5972\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=459793 obj=15.1461 num_tokens=41280580 num_tokens/piece=89.7808\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=344844 obj=15.2885 num_tokens=43137869 num_tokens/piece=125.094\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=344843 obj=15.2281 num_tokens=43142897 num_tokens/piece=125.109\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=258632 obj=15.4073 num_tokens=45086624 num_tokens/piece=174.327\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=258632 obj=15.3484 num_tokens=45087203 num_tokens/piece=174.33\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=193974 obj=15.5576 num_tokens=46726298 num_tokens/piece=240.889\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=193974 obj=15.5026 num_tokens=46726287 num_tokens/piece=240.889\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=145480 obj=15.7268 num_tokens=48196596 num_tokens/piece=331.294\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=145480 obj=15.6766 num_tokens=48196650 num_tokens/piece=331.294\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=109110 obj=15.9223 num_tokens=49621655 num_tokens/piece=454.786\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=109110 obj=15.872 num_tokens=49621543 num_tokens/piece=454.785\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=81832 obj=16.1363 num_tokens=51032940 num_tokens/piece=623.631\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=81832 obj=16.084 num_tokens=51033150 num_tokens/piece=623.633\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=61374 obj=16.373 num_tokens=52469102 num_tokens/piece=854.908\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=61374 obj=16.314 num_tokens=52470264 num_tokens/piece=854.927\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=46030 obj=16.6282 num_tokens=53971634 num_tokens/piece=1172.53\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=46030 obj=16.5661 num_tokens=53972222 num_tokens/piece=1172.54\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=0 size=35200 obj=16.8836 num_tokens=55349142 num_tokens/piece=1572.42\n",
+      "unigram_model_trainer.cc(623) LOG(INFO) EM sub_iter=1 size=35200 obj=16.8155 num_tokens=55349925 num_tokens/piece=1572.44\n",
+      "trainer_interface.cc(686) LOG(INFO) Saving model: sentencepiece.model\n",
+      "trainer_interface.cc(698) LOG(INFO) Saving vocabs: sentencepiece.vocab\n"
+     ]
+    }
+   ],
    "source": [
     "import sentencepiece as spm\n",
     "\n",
+    "sentencepiece_tokenizer_path = \"./tmp/sentencepiece_tokenizer.model\"\n",
+    "num_threads = 1\n",
+    "\n",
     "spm.SentencePieceTrainer.train(\n",
-    "    \"--input=wiki_ko.txt --model_prefix=sentencepiece --vocab_size=32000\"\n",
-    ")"
+    "    \"--input={} --model_prefix=sentencepiece --vocab_size=32000 --num_threads={}\".format(wiki_filepath, num_threads)\n",
+    ")\n",
+    "!mv sentencepiece.* ./tmp/"
    ]
   },
   {
@@ -240,28 +384,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BPE: ['안', '녕', '하', '세', '요', '.', '이', '문', '장은', '토', '크', '나이', '저', '를', '테', '스트', '하기', '위한', '샘', '플', '문', '장', '입', '니다', '.']\n",
+      "WordPiece: ['안', '##녕', '##하', '##세', '##요', '##.', '## ', '##이', '## ', '##문', '##장', '##은', '## ', '##토', '##크', '##나', '##이', '##저', '##를', '## ', '##테', '##스', '##트', '##하', '##기', '## ', '##위', '##한', '## ', '##샘', '##플', '## ', '##문', '##장', '##입', '##니', '##다', '##.']\n",
+      "SentencePiece: ['▁', '안녕하세요', '.', '▁이', '▁문장', '은', '▁토크', '나', '이', '저', '를', '▁테스트', '하기', '▁위한', '▁샘플', '▁문장', '입니다', '.']\n"
+     ]
+    }
+   ],
    "source": [
+    "from tokenizers import Tokenizer\n",
+    "import sentencepiece as spm\n",
+    "\n",
     "sample_sentence = \"안녕하세요. 이 문장은 토크나이저를 테스트하기 위한 샘플 문장입니다.\"\n",
     "\n",
+    "bpe_tokenizer_path = \"./tmp/bpe_tokenizer.json\"\n",
+    "wordpiece_tokenizer_path = \"./tmp/wordpiece_tokenizer.json\"\n",
+    "unigram_tokenizer_path = \"./tmp/unigram_tokenizer.json\"\n",
+    "sentencepiece_tokenizer_path = \"./tmp/sentencepiece_tokenizer.model\"\n",
+    "\n",
     "# BPE\n",
-    "bpe = Tokenizer.from_file(\"bpe_tokenizer.json\")\n",
+    "bpe = Tokenizer.from_file(bpe_tokenizer_path)\n",
     "print(\"BPE:\", bpe.encode(sample_sentence).tokens)\n",
     "\n",
     "# WordPiece\n",
-    "wordpiece = Tokenizer.from_file(\"wordpiece_tokenizer.json\")\n",
+    "wordpiece = Tokenizer.from_file(wordpiece_tokenizer_path)\n",
     "print(\"WordPiece:\", wordpiece.encode(sample_sentence).tokens)\n",
     "\n",
     "# Unigram\n",
-    "unigram = Tokenizer.from_file(\"unigram_tokenizer.json\")\n",
+    "unigram = Tokenizer.from_file(unigram_tokenizer_path)\n",
     "print(\"Unigram:\", unigram.encode(sample_sentence).tokens)\n",
     "\n",
     "# SentencePiece\n",
     "spm = spm.SentencePieceProcessor()\n",
-    "spm.load(\"sentencepiece.model\")\n",
-    "print(\"SentencePiece:\", spm.encode_as_pieces(sample_sentence))"
+    "spm.load(sentencepiece_tokenizer_path)\n",
+    "print(\"SentencePiece:\", spm.encode_as_pieces(sample_sentence))\n"
    ]
   },
   {
@@ -312,7 +474,7 @@
     "    special_tokens=[\"<s>\", \"<pad>\", \"</s>\", \"<unk>\", \"<mask>\"],\n",
     ")\n",
     "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"bpe_gpt_tokenizer.json\")\n"
+    "tokenizer.save(\"bpe_gpt_tokenizer.json\")"
    ]
   },
   {
@@ -344,7 +506,7 @@
     "    vocab_size=30000, special_tokens=[\"[PAD]\", \"[UNK]\", \"[CLS]\", \"[SEP]\", \"[MASK]\"]\n",
     ")\n",
     "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"wordpiece_bert_tokenizer.json\")\n"
+    "tokenizer.save(\"wordpiece_bert_tokenizer.json\")"
    ]
   },
   {
@@ -375,7 +537,7 @@
     "    vocab_size=32000, special_tokens=[\"<pad>\", \"</s>\", \"<unk>\", \"<s>\"]\n",
     ")\n",
     "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"unigram_t5_tokenizer.json\")\n"
+    "tokenizer.save(\"unigram_t5_tokenizer.json\")"
    ]
   },
   {
@@ -385,6 +547,12 @@
    "source": [
     "In summary, we have trained three tokenizers using the same specifications as the GPT, BERT, and T5 models. BPE is used in GPT with a vocabulary size of 50,000, WordPiece is used in BERT with a vocabulary size of 30,000, and Unigram is used in T5 with a vocabulary size of 32,000. These tokenizers are all data-driven and provide different ways to handle subword tokenization, which can be beneficial for handling out-of-vocabulary words and improving the performance of the models.\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
