docs(deepnlp): update training tokenizers lab

--- a/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
+++ b/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
@@ -172,19 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tokenizers.models import WordPiece\n",
     "\n",
@@ -480,9 +470,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "source": [
-    "## WordPiece - BERT\n",
+    "### WordPiece - BERT\n",
     "\n",
     "BERT models use the WordPiece tokenizer with a vocabulary size of 30,000. WordPiece is a data-driven tokenization strategy that allows for better handling of out-of-vocabulary (OOV) words.\n",
     "\n",
@@ -514,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unigram - T5\n",
+    "### Unigram - T5\n",
     "\n",
     "T5 models use the Unigram tokenizer with a vocabulary size of 32,000. The Unigram tokenizer is a subword regularization algorithm that learns a vocabulary based on the frequency of subwords in the training text.\n",
     "\n",
